k8s/services/api-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selmag-api-gateway-deployment
  namespace: selmag
  labels:
    app: selmag-api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selmag-api-gateway
  template:
    metadata:
      labels:
        app: selmag-api-gateway
    spec:
      containers:
        - name: selmag-api-gateway
          image: host.docker.internal:5000/selmag/api-gateway:24.1.1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8086
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 6
