k8s/services/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: selmag-api-gateway-svc
  namespace: selmag
spec:
  type: ClusterIP
  selector:
    app: selmag-api-gateway
  ports:
    - name: http
      port: 8086
      targetPort: 8086
