k8s/services/api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: selmag-api-gateway-ingress
  namespace: selmag
spec:
  ingressClassName: nginx
  rules:
    - host: catalogue.api.selm.ag.192.168.49.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: selmag-api-gateway-svc
                port:
                  name: http

    - host: feedback.api.selm.ag.192.168.49.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: selmag-api-gateway-svc
                port:
                  name: http

    - host: manager.selm.ag.192.168.49.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: selmag-api-gateway-svc
                port:
                  name: http

    - host: customer.selm.ag.192.168.49.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: selmag-api-gateway-svc
                port:
                  name: http
